# paper-scout

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  railway.toml  spec.md
.github/workflows/: ci.yml  weekly_digest.yml
backend/: cli.py  config.py  digest.py  email_sender.py  embeddings.py  security.py
backend/agents/: explorer.py  profiler.py  scorer.py
backend/api/: main.py  routes_rate.py  schemas.py
backend/db/: migrations.py  repository.py  schema.sql
backend/ingestors/: arxiv.py  base.py  huggingface.py  papers_with_code.py  reddit.py  rss.py  semantic_scholar.py
backend/llm/: base.py  claude_provider.py  factory.py  gemini_provider.py  ollama_provider.py
tests/: conftest.py  test_api_routes.py  test_digest_orchestrator.py  test_embeddings.py  test_explorer.py  test_ingestors.py  test_misc.py  test_profiler.py  test_repository.py  test_scorer.py  test_security.py
