[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-scout"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "sentence-transformers>=2.7.0",
    "numpy>=1.26.0",
    "anthropic>=0.25.0",
    "google-genai>=1.0.0",
    "ollama>=0.1.0",
    "arxiv>=2.1.0",
    "feedparser>=6.0.11",
    "praw>=7.7.1",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[project.scripts]
paper-scout = "backend.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.coverage.report]
omit = ["backend/email_sender.py"]

[tool.ruff]
line-length = 100
